Start integration of JWT